--- a/Okeda2-master/AndroidManifest.xml
+++ b/Okeda2-master/AndroidManifest.xml
@@ -45,19 +45,17 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyCfH9PcVHQcIo4vlgbzj8GxDAdkUSL0qtQ" />
+            android:value="AIzaSyBCdsjNiWHclrbjtgA0bf1rAMhHGAp75j0" />
 
         <activity
             android:name="co.gov.fna.okeda.presentacion.actividades.LoginActitvity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
-                 <action android:name="co.gov.fna.okeda.presentacion.actividades.LoginActitvity" />
+                <action android:name="co.gov.fna.okeda.presentacion.actividades.LoginActitvity" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name="co.gov.fna.okeda.presentacion.actividades.Dashboard.DashBoard"
-            android:label="@string/title_activity_dash_board" >
         </activity>
         <activity
             android:name="co.gov.okeda.utilidades.Bienvenida"
@@ -65,73 +63,92 @@
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
+            android:name="co.gov.fna.okeda.presentacion.actividades.Dashboard.DashBoard"
+            android:label="@string/title_activity_dash_board" >
+        </activity>
+        <activity
             android:name="co.gov.fna.okeda.presentacion.actividades.BusquedaViviendas"
-            android:label="@string/title_activity_busqueda_viviendas" >
+            android:label="@string/title_activity_busqueda_viviendas"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="co.gov.fna.okeda.presentacion.actividades.MostrarVivienda"
-            android:label="@string/title_activity_mostrar_vivienda" >
+            android:label="@string/title_activity_mostrar_vivienda"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="co.gov.fna.okeda.presentacion.actividades.ComentariosActivity"
-            android:label="@string/title_activity_comentarios" >
+            android:label="@string/title_activity_comentarios"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="co.gov.fna.okeda.presentacion.actividades.BusquedaPuntoAtencionActivity"
-            android:label="@string/title_activity_busqueda_punto_atencion" >
+            android:label="@string/title_activity_busqueda_punto_atencion"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="co.gov.fna.okeda.presentacion.actividades.PuntoAtencionActivity"
-            android:label="Detalle Punto Atención" >
+            android:label="Detalle Punto Atención"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="co.gov.fna.okeda.presentacion.actividades.MapaActivity"
-            android:label="@string/title_activity_mapa_activty" >
+            android:label="@string/title_activity_mapa_activty"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".usuario.MapasAc"
-            android:label="@string/title_activity_mapas" >
+            android:label="@string/title_activity_mapas"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".usuario.PerfilActivity"
-            android:label="@string/title_activity_perfil" >
+            android:label="@string/title_activity_perfil"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".usuario.Formulario"
-            android:label="Formulario" >
+            android:label="Formulario"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".usuario.CreditoActivity"
-            android:label="Credito" >
+            android:label="Credito"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="co.gov.fna.okeda.usuario.Mapas"
-            android:label="@string/title_activity_mapas" >
+            android:label="@string/title_activity_mapas"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="co.gov.fna.okeda.presentacion.actividades.preference.PreferenceActivityFragment"
-            android:label="@string/title_activity_preference" >
+            android:label="@string/title_activity_preference"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="co.gov.fna.okeda.presentacion.actividades.CreditsSimulator"
-            android:label="@string/title_activity_credits_simulator" >
+            android:label="@string/title_activity_credits_simulator"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="co.gov.fna.okeda.presentacion.actividades.CreditFoundedActivity"
-            android:label="@string/title_activity_credit_founded" >
+            android:label="@string/title_activity_credit_founded"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".usuario.PreferenceActivityMain"
-            android:label="@string/title_activity_preference_activity_main" >
+            android:label="@string/title_activity_preference_activity_main"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="co.gov.fna.okeda.presentacion.actividades.SimuladorActivity"
-            android:label="@string/title_activity_preference_activity_main" >
+            android:label="@string/title_activity_preference_activity_main"
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
