--- a/Okeda2-master/.classpath
+++ b/Okeda2-master/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="lib" path="C:/Users/Alexis-PC/Desktop/Parse-1.5.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Alexis-PC/Desktop/jars/Parse-1.5.1.jar"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/android-support-v7-appcompat"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
